<resources>
    <string name="app_name">Widget World</string>
    <string name="buttonSubmit">SEND TEXT</string>
    <string name="buttonReset">RESET</string>
    <string name="Greeting">Hello Widget World!</string>
    <string name="EditTextHint">Click Here to Enter Text</string>
    <string name="imageViewStar">Star image</string>
    <string name="DoNothing">Do-Nothing</string>
    <string name="EditText">EditText</string>
</resources>