<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Greeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="337dp"
        android:layout_height="72dp"
        android:layout_marginTop="28dp"
        android:text="@string/buttonSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:background="#8892E334"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="337dp"
        android:layout_height="72dp"
        android:layout_marginTop="112dp"
        android:background="#A4E82D2D"
        android:text="@string/buttonReset"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/EditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Type what you want"
        android:hint="@string/EditTextHint"
        android:inputType="text"
        android:textColorHint="#2ECA2E"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:gravity="right|end"
        android:hint="@string/EditTextHint"
        android:textColorHint="#396FD16F"
        android:textSize="40sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="337dp"
        android:layout_height="167dp"
        android:orientation="horizontal"
        android:rotationX="45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReset">

        <ImageView
            android:id="@+id/imageViewStar8"
            android:layout_width="409dp"
            android:layout_height="155dp"
            android:layout_weight="1"
            android:contentDescription="@string/imageViewStar"
            android:rotationX="32"
            app:srcCompat="@android:drawable/star_big_on" />

        <ImageView
            android:id="@+id/imageViewStar"
            android:layout_width="200dp"
            android:layout_height="155dp"
            android:contentDescription="@string/imageViewStar"
            android:rotationX="32"
            app:srcCompat="@android:drawable/star_big_on" />

        <ImageView
            android:id="@+id/imageViewStar9"
            android:layout_width="409dp"
            android:layout_height="155dp"
            android:layout_weight="1"
            android:contentDescription="@string/imageViewStar"
            android:rotationX="32"
            app:srcCompat="@android:drawable/star_big_on" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>